[OLINGO-713] Minor turorial fix